--- a/styleguide/scss/_config-measurements.scss
+++ b/styleguide/scss/_config-measurements.scss
@@ -12,32 +12,34 @@
 // The default is 12.
 $base-column-count: 12;
 
-// Gutters can be 0 to this value as a percentage.
-// Use the increment below to create a more granular range.
-// A smaller value yields smaller generated CSS code.
-// Set to 0 to disable.
-$highest-gutter-percentage: 15;
-// A larger value yields smaller generated CSS code.
-// Use 1.0 to only use whole numbers.
-$gutter-percentage-increment: 1.0;
+@if ($enable-legacy-features) {
 
-// Gutters can be 0 to this value as rems.
-// A smaller value yields smaller generated CSS code.
-// Set to 0 to disable.
-$highest-gutter-rem: 0;
-// A larger value yields smaller generated CSS code.
-// Use 1.0 to only use whole numbers.
-$gutter-rem-increment: 1.0;
+    // Gutters can be 0 to this value as a percentage.
+    // Use the increment below to create a more granular range.
+    // A smaller value yields smaller generated CSS code.
+    // Set to 0 to disable.
+    $highest-gutter-percentage: 15;
+    // A larger value yields smaller generated CSS code.
+    // Use 1.0 to only use whole numbers.
+    $gutter-percentage-increment: 1.0;
 
-// Row gutters can be 0 to this value as rems.
-// Use the increment below to create a more granular range.
-// A smaller value yields smaller generated CSS code.
-// Set to 0 to disable.
-$highest-row-gutter-rem: 3;
-// A larger value yields smaller generated CSS code.
-// Use 1.0 to only use whole numbers.
-$row-gutter-rem-increment: 0.25;
+    // Gutters can be 0 to this value as rems.
+    // A smaller value yields smaller generated CSS code.
+    // Set to 0 to disable.
+    $highest-gutter-rem: 0;
+    // A larger value yields smaller generated CSS code.
+    // Use 1.0 to only use whole numbers.
+    $gutter-rem-increment: 1.0;
 
+    // Row gutters can be 0 to this value as rems.
+    // Use the increment below to create a more granular range.
+    // A smaller value yields smaller generated CSS code.
+    // Set to 0 to disable.
+    $highest-row-gutter-rem: 3;
+    // A larger value yields smaller generated CSS code.
+    // Use 1.0 to only use whole numbers.
+    $row-gutter-rem-increment: 0.25;
+}
 
 // SIZES
 // Following are various sizes for unit margins, line thicknesses, etc.
