--- a/styleguide/scss/custom/_layout-header.scss
+++ b/styleguide/scss/custom/_layout-header.scss
@@ -99,7 +99,7 @@ body {
             }
         }
 
-        &#logo-sample {
+        &:not(#logo) {
 
             padding: 1rem;
             background-color: sf-get-color(graylightest);
