--- a/styleguide/scss/_config-measurements.scss
+++ b/styleguide/scss/_config-measurements.scss
@@ -12,33 +12,42 @@
 // The default is 12.
 $base-column-count: 12;
 
-@if ($enable-legacy-features) {
+@if ($support-all-browsers) {
 
     // Gutters can be 0 to this value as a percentage.
     // Use the increment below to create a more granular range.
     // A smaller value yields smaller generated CSS code.
     // Set to 0 to disable.
-    $highest-gutter-percentage: 15;
+    $highest-gutter-percentage: 15 !global;
     // A larger value yields smaller generated CSS code.
     // Use 1.0 to only use whole numbers.
-    $gutter-percentage-increment: 1.0;
+    $gutter-percentage-increment: 1.0 !global;
 
     // Gutters can be 0 to this value as rems.
     // A smaller value yields smaller generated CSS code.
     // Set to 0 to disable.
-    $highest-gutter-rem: 0;
+    $highest-gutter-rem: 0 !global;
     // A larger value yields smaller generated CSS code.
     // Use 1.0 to only use whole numbers.
-    $gutter-rem-increment: 1.0;
+    $gutter-rem-increment: 1.0 !global;
 
     // Row gutters can be 0 to this value as rems.
     // Use the increment below to create a more granular range.
     // A smaller value yields smaller generated CSS code.
     // Set to 0 to disable.
-    $highest-row-gutter-rem: 3;
+    $highest-row-gutter-rem: 3 !global;
     // A larger value yields smaller generated CSS code.
     // Use 1.0 to only use whole numbers.
-    $row-gutter-rem-increment: 0.25;
+    $row-gutter-rem-increment: 0.25 !global;
+
+    // Grid cells can be 0 to this value as a percentage.
+    // Use the increment below to create a more granular range.
+    // A smaller value yields smaller generated CSS code.
+    // Set to 0 to disable.
+    $highest-width-percentage: 15 !global;
+    // A larger value yields smaller generated CSS code.
+    // Use 1.0 to only use whole numbers.
+    $width-percentage-increment: 0.5 !global;
 }
 
 // SIZES
