--- a/styleguide/scss/_config.scss
+++ b/styleguide/scss/_config.scss
@@ -16,15 +16,25 @@ span#sfumato-version[role="status"]::after {
     content: quote($sfumato-version);
 }
 
-// Support browsers from 2014 and later 
-// (e.g. grid uses tag attributes like sf-cols, sf-tabp-cols, etc.)
-// Generates a much larger CSS file
-$enable-legacy-features: false;
-
-// Support browsers from 2016 and later
-// (e.g. use CSS custom properties, calc(), etc.)
-// Generates the smallest CSS file
-$enable-2016-features: true;
+// Browser support
+//
+// true:  Support browsers from 2014 and later; 
+//        creates a larger CSS file and fewer sizing options.
+//
+//        - Oldest desktop browsers: IE11, Edge 12, Chrome 29, 
+//          Firefox 28, Opera 17, Safari 9
+//        - Oldest mobile browsers: iOS Safari 9.2, 
+//          Android: Opera Mobile 37, webview 4.4, Chrome 29, Firefox 31
+//
+// false: Support browsers from 2016 and later;
+//        creates a smaller CSS file.
+//
+//        - Oldest desktop browsers: Edge 15, Chrome 49, 
+//          Firefox 31, Opera 36, Safari 9
+//        - Oldest mobile browsers: iOS Safari 9.2, 
+//          Android: Opera Mobile 37, webview 50, Chrome 49, Firefox 31
+//
+$support-all-browsers: true;
 
 // Load all configuration files
 @import "config-breakpoints";
