--- a/styleguide/scss/_config-typography.scss
+++ b/styleguide/scss/_config-typography.scss
@@ -3,8 +3,8 @@
 //------------------------------------//
 
 // REQUIRED: Font stacks
-$font-body: -apple-system, BlinkMacSystemFont, Helvetica, Calibri, Arial, sans-serif;
-$font-mono: -apple-system-mono, 'Menlo', 'Consolas', 'Monaco', 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', 'Courier', 'Courier New', monospace;
+$font-body: 'Roboto', -apple-system, BlinkMacSystemFont, Helvetica, Calibri, Arial, sans-serif;
+$font-mono: 'Inconsolata', -apple-system-mono, 'Menlo', 'Consolas', 'Monaco', 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', 'Courier', 'Courier New', monospace;
 $font-head: $font-body;
 
 // REQUIRED: Base font sizes and line heights
